@@ -52,6 +52,7 @@ Build-Depends: binutils,
                python-numpy,
                quilt,
                rsync,
+               t1utils,
                unzip,
                xz-utils,
                xz-utils (>= 5.1.1alpha+20120614) | xz-lzma | lzma,
@@ -85,6 +86,7 @@ Depends: binutils,
          man-db,
          patchutils,
          perl,
+         t1utils,
          ${misc:Depends}
 Suggests: binutils-multiarch,
           dpkg-dev,
