@@ -1,0 +1,8 @@
+all: bad.pfb good.pfb
+
+%.pfb: %.raw
+	t1asm $< > $@
+
+clean:
+	rm -f *.pfb
+
