@@ -1,0 +1,1 @@
+*.pfb usr/share/lintian/fonts/
