@@ -1,0 +1,5 @@
+Testname: files-adobe-font
+Sequence: 6000
+Version: 1.0
+Description: Test for adobe font license issues
+Test-For: font-adobe-copyrighted-fragment
